2010-06-07  Daniel Elstner  <danielk@openismus.com>

	Do not unnecessarily cast booleans to pointers

	* cairomm/fontface.cc (USER_DATA_KEY_DEFAULT_TEXT_TO_GLYPHS): Put
	dummy object into an anonymous namespace and make it static.
	(UserFontFace::text_to_glyphs): Do not cast a boolean to a pointer
	in order to indicate state via the font face's user data.  There are
	fairly safe alternative casts to do this, but it is much simpler to
	just take the address of any existing object to get a non-0 pointer.
	(UserFontFace::UserFontFace): Remove unnecessary casts.

2009-10-26  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/cairomm/cairomm.rc.in:
	* MSVC_Net2008/cairomm/cairomm.rc.in: Replaced GENERIC_MAJOR_VERSION
	et al. by CAIROMM_MAJOR_VERSION, so that they are properly replaced
	during configure.

	* MSVC_Net2005/examples/image-surface/image-surface.vcproj:
	* MSVC_Net2005/examples/pdf-surface/pdf-surface.vcproj:
	* MSVC_Net2005/examples/ps-surface/ps-surface.vcproj:
	* MSVC_Net2005/examples/svg-surface/svg-surface.vcproj:
	* MSVC_Net2005/examples/text-rotate/text-rotate.vcproj:
	* MSVC_Net2005/examples/toy-text/toy-text.vcproj:
	* MSVC_Net2005/examples/user-font/user-font.vcproj:
	* MSVC_Net2008/examples/image-surface/image-surface.vcproj:
	* MSVC_Net2008/examples/pdf-surface/pdf-surface.vcproj:
	* MSVC_Net2008/examples/ps-surface/ps-surface.vcproj:
	* MSVC_Net2008/examples/svg-surface/svg-surface.vcproj:
	* MSVC_Net2008/examples/text-rotate/text-rotate.vcproj:
	* MSVC_Net2008/examples/toy-text/toy-text.vcproj:
	* MSVC_Net2008/examples/user-font/user-font.vcproj: Added
	$(SolutionDir)/cairomm to the include search paths, so that
	cairommconfig.h is found even if configure did not run.

	* cairomm/fontface.cc: MSVC does not allow to reinterpret_cast a bool
	to void*, so use an int instead.

	* cairomm/context.cc:
	* examples/surfaces/image-surface.cc:
	* examples/surfaces/pdf-surface.cc:
	* examples/surfaces/ps-surface.cc:
	* examples/surfaces/svg-surface.cc: